# beans-gambit

./: .gitignore  Cargo.toml  README.md  clean_logs.rss  dumb.pgn  fails-threefold  flake.nix  game.pgn  interesting.txt  uci-crate  underpromote.pgn
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 05zq22ry219543phf7q87d883kxl6ry7-source  cjfcdcaj28y1ydp6z0sqp163bpjl59j8-source
.github/workflows/: clippy_fmt.yml  rust.yml  tests.yml
bot/: Cargo.toml  rust.yml
bot-uci/: Cargo.toml
bot-uci/src/: main.rs  state.rs  uci_state.rs
bot/src/: lib.rs
chess-gui/: Cargo.toml
chess-lib/: Cargo.toml
chess-lib/src/: board.rs  common.rs  lib.rs  movegen.rs  moves.rs  perft.rs  square.rs  util.rs
chess-lib/src/board/: bitboard.rs  color.rs  hash.rs  mv.rs  piece.rs  piece_storage.rs  square.rs
chess-lib/src/movegen/: precomputed_bitboards.rs  sliding.rs
chess-lib/src/movegen/sliding/: bishop_attack_sets.rs  rook_attack_sets.rs
chess-lib/src/util/: dense_integer_map.rs
chess-runner/: Cargo.toml
chess-runner/src/: bot_resolver.rs  main.rs  options.rs  prerequisites.rs  run.rs  setup.rs  stockfish_ladder.rs  util.rs
cutechess-interface/: Cargo.toml
cutechess-interface/src/: options.rs  prerequisites.rs  run.rs
cutechess-runner/: Cargo.toml
cutechess-runner/src/: main.rs  prerequisites.rs  run.rs
engine/: Cargo.toml  build.rs
engine-uci/: Cargo.toml
engine-uci/src/: main.rs  uci_conversions.rs  uci_state.rs
engine/src/: bot_state.rsunused  debug.rsunused  eval.rs  heatmaps.rs  lib.rs  minimax.rs  move_ordering.rs  results.rs  tt.rs
engine/src/constant_heuristics/: heatmaps.rs  mod.rs  pieces.rs
engine/src/minimax/: minimax_result.rs
opening-book/: Cargo.toml  build.rs
opening-book/src/: lib.rs  shared.rs
util-divide/: Cargo.toml
util-divide/src/: main.rs
