[package]
name = "chess-lib"
version = "0.4.0"
edition = "2024"

[dependencies]
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive_more = { version = "2.0.1", features = ["full"] }
itertools = "0.14.0"
rand = "0.9.2"
smallvec = { version = "1.15.1", features = ["const_generics"] }
strum = "0.27.2"
strum_macros = "0.27.2"
# Broken on crates.io
const-random = { git = "https://github.com/tkaitchuck/constrandom", rev = "4f71cb510e77eb6a26f8c7296c17811d0416fd41" }
