[package]
name = "chess-runner"
version = "0.1.0"
edition = "2024"

default-run = "chess-runner"

[dependencies]
chess-lib = { path = "../chess-lib" }

color-print = "0.3.7"
derive-getters = "0.5.0"
derive-new = "0.7.0"
dialoguer = { version = "0.12.0" }
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
strum = "0.27.2"
strum_macros = "0.27.2"
which = "8.0.0"
either = "1.15.0"
cfg-if = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.2", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Console",
    "Win32_System_Threading"
]}