[package]
name = "chess-runner"
version = "0.4.4"
edition = "2024"

default-run = "chess-runner"

[dependencies]
chess-lib = { path = "../chess-lib" }

color-print = "0.3.7"
derive-getters = "0.5.0"
derive-new = "0.7.0"
dialoguer = { version = "0.12.0" }
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = "0.28.0"
strum_macros = "0.28.0"
which = "8.0.2"
either = "1.15.0"
open = "5.3.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.2", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Console",
    "Win32_System_Threading"
] }
